Fix/bundling too much scss (#660)
* removed some unnecessary imported styles

* removed duplicated css styles definitions

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,33 +4,9 @@
 @import "../resources/elements/primeDesignSystem/variables";
 @import "../resources/elements/primeDesignSystem/colors";
 @import "./colors";
+@import "./variables";
 @import "tippy.js/dist/tippy.css"; // TODO: use CDN?
 @import "the-new-css-reset/css/reset.css";
-
-@mixin tokenIcon {
-  width: 19px;
-  border-radius: 9px;
-}
-
-$MinContentBodyWidth: 250px;
-
-$MinContentBodyPaddingLeftRight: 160px;
-$MaxContentBodyWidth: 1120px;
-
-$ContentBodyWidth: clamp($MinContentBodyWidth,
-  calc(100% - (#{$MinContentBodyPaddingLeftRight} * 2)),
-  $MaxContentBodyWidth);
-
-$BodyPaddingLeftRight: calc((100% - #{$ContentBodyWidth}) / 2);
-
-$ContentMinLeftRightPadding: 20px;
-$MaxContentBodyWidthMobile: calc(100% - (#{$ContentMinLeftRightPadding} * 2));
-
-$ContentBodyWidthMobile: minmax($MinContentBodyWidth,
-  calc(100vw - (#{$ContentMinLeftRightPadding} * 2)),
-  $MaxContentBodyWidthMobile);
-
-$BodyPaddingLeftRightMobile: calc((100% - #{$ContentBodyWidthMobile}) / 2);
 
 html {
   body {
